@startuml
' 프로젝트 주요 클래스 다이어그램
class StageSelectScene {
  - int stageMapIdx
  - List<StageMapUI> stageMapUIList
  + Start()
  + LoadMap(int)
}
class ResourceManager {
	- Dictionary<string, AsyncOperationHandle> loadHandles
  - List<AsyncOperationHandle> instantiateHandles
  + IEnumerator Init(System.Action onComplete = null)
  + System.Threading.Tasks.Task<T> LoadAssetAsyncTask<T>(string key)
  + System.Threading.Tasks.Task<GameObject> InstantiateAsyncTask(string key, UnityEngine.Transform parent = null, UnityEngine.Vector3? position = null, UnityEngine.Quaternion? rotation = null)
  + void LoadAssetAsync<T>(string key, System.Action<T> onLoaded)
  + T GetResource<T>(string key)
  + Sprite GetSpriteFromAtlas(string atlasKey, string key)
  + void Release(string key)
  + void ReleaseInstance(GameObject go)
  + void ReleaseAll()
}
class DataTableManager {
  - Dictionary<DataTableType, IDataLoad> dataList
	+ T GetDB<T>(uint idx)
  + T GetDB<T>(DataTableType dataTableType)
  + int GetDataCount<T>(DataTableType dataTableType)
  + MapData GetMapData(uint idx)
  + SkillData GetSkillData(uint idx)
}
class SaveLoadManager {
	+ ClientData ClientData
  + UserData UserData
  + StageClearData StageClearData
  + UserSkillData UserSkillData
  + void SaveClientData()
  + void LoadClientData()
  + void SaveUserData(System.Action<string> onComp, System.Action<string> onFail)
  + void LoadUserData(System.Action onComp, System.Action<string> onFail)
}

StageSelectScene --> ResourceManager : Load/Instantiate
StageSelectScene --> DataTableManager : GetMapData
StageSelectScene --> SaveLoadManager : UserData
StageSelectScene --> GameSceneManager : LoadScene
ResourceManager --> Addressables
DataTableManager --> MapDataForm
SaveLoadManager ..> GameNetworkManager

'"전투 도메인 추가"
class UnitBase {
  + UnitData Info
  + void InitUnitData()
  + void ApplyDamage(float)
  + void AddATBTick(float)
  + void Release()
}

class PlayerUnit
class MonsterUnit
class UnitCalculator {
  + static int CalculateDamage(UnitBase attacker, UnitBase defender)
}

class BTile {
  + BTileType type
  + int x
  + int y
}

class BBoard {
  - BTile[,] tiles
  - UnitBase Owner
  + static BBoard CreateEmptyBoard(...)
  + void InitBoard(uint[] skillList = null)
  + void SetOwner(UnitBase)
}

class BattleStage {
  - List<UnitBase> unitList
  - List<BBoard>[] boardList
  + void InitStage(UserData, StageData)
  + void ReleaseStage()
  + void OnPuzzleCompleted(PuzzleResult)
}

class BattleContent

UnitBase <|-- PlayerUnit
UnitBase <|-- MonsterUnit
BBoard --> BTile : contains
BBoard --> UnitBase : Owner
BattleStage --> BBoard : manages
BattleStage --> UnitBase : contains
BattleStage --> Factory : allocates
BattleContent --> BattleStage : uses
Factory --> BBoard
Factory --> UnitBase

@enduml